style.css
/* ... */
/* Hover Animation für Grid Items */
.language-item:hover {
    transform: scale(1.05) rotate(2deg);
    box-shadow: 0 0 10px rgba(0, 122, 255, 0.5),
    0 0 20px rgba(0, 122, 255, 0.5),
    0 0 30px rgba(0, 122, 255, 0.5);
    border: 2px solid rgba(0, 122, 255, 0.78);
}


/* =========================================================
   7. NAVIGATION
   ========================================================= */

.nav-container{
    display:flex;
    justify-content:space-between;
    padding-left:5px;
    padding-right:5px;
}

.nav-item{
    display:flex;
    flex-direction:column;
    align-items:center;
    padding:5px 40px;
    text-decoration:none;
    color:var(--text-color);
    font-weight:700;
    font-size:16px;
}

.nav-item img.nav-icon{
    width:24px;
    height:24px;
    margin-bottom:5px;
}

.nav-item.active{
    background:var(--nav-active-bg);
    border-radius:90px;
    color:var(--color-primary);
}

.nav-item.active img.nav-icon{
    filter: brightness(0) saturate(100%)
    invert(42%) sepia(98%) saturate(2592%)
    hue-rotate(199deg) brightness(101%) contrast(101%);
}

[data-theme="dark"] .nav-item:not(.active) img.nav-icon{
    filter: brightness(0) invert(1);
}

[data-theme="dark"] .main-image {
    filter: brightness(0) invert(1);
}

/* =========================================================
   8. DARKMODE TOGGLE
   ========================================================= */

.mode-icon{
    height:25px;
    width:25px;
    margin:0 5px;
}

.mode-icon.active{
    filter: brightness(0) saturate(100%)
    invert(42%) sepia(98%) saturate(2592%)
    hue-rotate(199deg) brightness(101%) contrast(101%);
}

[data-theme="dark"] .mode-icon.light{
    filter: brightness(0) invert(1);
}

.selector{
    position:absolute;
    top:50%;
    transform:translateY(-50%);
    width:35px;
    height:35px;
    background-color:var(--nav-active-bg);
    border-radius:50%;
    transition:left 0.3s;
}

/* =========================================================
   9. BUTTON CONTAINER
   ========================================================= */

.buttons {
    display:flex;
    justify-content:left;
    flex-wrap:wrap;
}

/* =========================================================
   10. RESPONSIVE DESIGN
   ========================================================= */

@media (max-width: 900px) {

    .grid-container {
        grid-template-columns: repeat(3, 1fr);
    }

}

@media (max-width: 700px) {

    .grid-container {
        grid-template-columns: repeat(2, 1fr);
    }

    .nav-item {
        padding: 5px 15px;
        font-size: 14px;
    }

    .nav-item img.nav-icon {
        width: 20px;
        height: 20px;
    }

    p {
        font-size: 14px;
    }

}

@media (max-width: 500px) {

    .grid-container {
        grid-template-columns: 1fr;
    }

    p{
        font-size: 14px;
    }

}

@media (max-width: 768px) {

    .navbar {
        top: 20px;
    }

    .darkmode-toggle {
        position: fixed;
        left: 43%;
        top: 85px;
        margin-top: 10px;
    }

    .main-container,
    .skills-container {
        margin-left: 20px;
        margin-right: 20px;
        margin-top: 140px;
    }

    p {
        font-size: 14px;
    }

}

/* Blur */
.top-blur-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 200px;
    pointer-events: none;
    z-index: 999;

    backdrop-filter: blur(20px); /* maximale Unschärfe */

    /* Maske, damit Blur nach unten abnimmt */
    -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
    -webkit-mask-repeat: no-repeat;
    -webkit-mask-size: 100% 100%;
    mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
    mask-repeat: no-repeat;
    mask-size: 100% 100%;
}

.blue {
    color: var(--color-primary);
    font-size: 130%;
    text-shadow:
            0 0 5px rgba(0, 122, 255, 0.3),
            0 0 10px rgba(0, 122, 255, 0.2),
            0 0 20px rgba(0, 122, 255, 0.1);
}



/* CURSOR */
.cursor-glow {
    position: fixed;
    left: 0;
    top: 0;

    width: 250px;
    height: 250px;

    pointer-events: none;
    border-radius: 50%;
    z-index: 0;

    background: radial-gradient(
            circle,
            rgba(0, 122, 255, 0.3),
            rgba(0, 122, 255, 0.15),
            rgba(0, 122, 255, 0.05),
            rgba(0, 122, 255, 0.001),
            rgba(0, 122, 255, 0)
    );

    transform: translate(-50%, -50%);
}


/* COMETS */
body {
    margin: 0;
    height: 200vh;
}

.comets {
    position: fixed;
    inset: 0;
    pointer-events: none;
    overflow: hidden;
}

.comet {
    position: absolute;
    width: 180px;
    height: 2px;

    background: linear-gradient(
            90deg,
            rgba(0, 122, 255, 0.02),
            rgb(0, 122, 255)
    );

    transform: rotate(45deg);
    animation: cometMove 6s linear infinite;
}

/* Verschiedene Startpositionen */
.comet:nth-child(1) {
    top: -20%;
    left: -10%;
    animation-delay: 0s;
}

.comet:nth-child(2) {
    top: -10%;
    left: -30%;
    animation-delay: 1s;
}

.comet:nth-child(3) {
    top: -30%;
    left: -5%;
    animation-delay: 2s;
}

.comet:nth-child(4) {
    top: -40%;
    left: -20%;
    animation-delay: 1.5s;
}

@keyframes cometMove {
    from {
        transform: translate(0, 0) rotate(30deg);
        opacity: 1;
    }
    to {
        transform: translate(120vw, 120vh) rotate(30deg);
        opacity: 0;
    }
}


/* Standard-Cursor ausblenden */
body {
    cursor: none;
}

a,
button,
input,
textarea,
select,
label {
    cursor: none;
}

/* Blob */
.cursor {
    position: fixed;
    width: 12px;
    height: 12px;
    background: rgba(0, 123, 255, 0.35);
    border-radius: 50%;
    pointer-events: none;
    transform: translate(-50%, -50%);
    transition: transform 0.15s ease, width 0.15s ease, height 0.15s ease;
    z-index: 9999;
    backdrop-filter: blur(2px);
    box-shadow: 0 0 10px rgba(0, 123, 255, 0.3);
}
/* ... */

